kubernetes/deploy/argocd/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-server
  namespace: argocd
  annotations: 
    kubernetes.io/ingress.class: traefik-internal
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`argo.vandeneede.org`)
      priority: 10
      services:
        - name: argocd-server
          port: https
    - kind: Rule
      match: Host(`argo.vandeneede.org`) && Headers(`Content-Type`, `application/grpc`)
      priority: 11
      services:
        - name: argocd-server
          port: https
          scheme: h2c
  tls:
    secretName: vandeneede-org-production-tls
